# Algorithm_Exercises

./: .gitignore  CMakeLists.txt
POO/Ejercicio 1/Ejercicio 1/: CListaTransporte.hpp  CTransporte.hpp  Ejercicio 1.sln
POO/Ejercicio 1/Ejercicio 1/Ejercicio 1/: Ejercicio 1.vcxproj  Ejercicio 1.vcxproj.filters  funciones.hpp  main.cpp
POO/Ejercicio 1/Ejercicio 1/Ejercicio 1/x64/Debug/: Ejercicio 1.exe.recipe  Ejercicio 1.vcxproj.FileListAbsolute.txt
POO/Ejercicio 1/Ejercicio 1/Ejercicio 1/x64/Debug/Ejercicio 1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Ejercicio 1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
POO/Ejercicio 1/Ejercicio 1/x64/Debug/: Ejercicio 1.exe.metagen
W03_Ejercicios/ejercicio2/: CEncuestado.hpp  CListaEncuestado.hpp  ejercicio2.cpp
W03_Ejercicios/ejercicio3/: CArregloCliente.hpp  CArregloCompra.hpp  CArregloProducto.hpp  CCliente.hpp  CCompra.hpp  CProducto.hpp  CTienda.hpp  ejercicio3.cpp
W03_Ejercicios/ejercicio4/: CAnimal.hpp  CArrAnimal.hpp  CArrDiagnostico.hpp  CArrPersonal.hpp  CDiagnostico.hpp  CPersonal.hpp  ejercicio4.cpp
W03_Ejercicios/ejercicio4/output/: ejercicio4
W03_Ejercicios/ejericicio1/: CControladora.hpp  CListaTienda.hpp  CProducto.hpp  CProveedor.hpp  ejercicio01.cpp
W03_Ejercicios/ejericicio1/output/: ejercicio01
W03_Ejercicios/ejericio1/: CListaTienda.hpp  CProducto.hpp  CProveedor.hpp  ejercicio01.cpp
competitive_programming/: ejercicio_1.cpp  ejercicio_2.cpp  ejercicio_3.cpp  ejercicio_4.cpp
